# SmartThings-basic-rest

./: .gitignore  README.md  pyproject.toml  setup.py
SmartThings-basic-rest/: __init__.py
smartthings_basic_rest/: __init__.py
