[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]


[project]
name = "SmartThings-basic-rest"
dependencies = ['requests', 'json; python_version<"3.10"']
description = "SmartThings Plug API"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["SmartThings"]
license = { text = "MIT" }
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]
